k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-kubernetes-go-deployment
  labels:
    app: sample-kubernetes-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-kubernetes-go
  template:
    metadata:
      labels:
        app: sample-kubernetes-go
    spec:
      containers:
      - name: sample-kubernetes-go
        image: rohit20001221/sample-kubernetes-go
        resources:
          limits:
            memory: 250Mi
            cpu: "1"
          requests:
            memory: 128Mi
            cpu: "0.2"
        ports:
        - containerPort: 8080
