k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-kubernetes-go
spec:
  selector:
    app.kubernetes.io/name: sample-kubernetes-go
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      # nodePort: 30000
