k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-kubernetes-go-ingress
  annotations:
    kubernetes.io/ingress.className: "traefik"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-kubernetes-go-service
                port:
                  number: 80
